--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="album_title">Album</string>
     <string name="genre_title">Genre</string>
+    <string name="genre_artist_title">Popular %s artists</string>
 </resources>
