Feature/update design (#4)
* Update status bar and nav bar color

* Genre - add header

* Fix not run animation

* Artist item - change to circle shape

* Update the style - make status bar and nav bar opaque

* Artist list - add toolbar
Update fragment animation

* Toolbar - add shadow

* Artist detail - update design

Co-authored-by: Phong Huynh <phonghdt@vng.com.vn>

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="album_title">Album</string>
+    <string name="genre_title">Genre</string>
+    <string name="genre_artist_title">Popular %s artists</string>
+    <string name="follow">Follow</string>
+    <string name="play">Play</string>
 </resources>
