--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Deezer</string>
     <string name="album_title">Album</string>
     <string name="genre_title">Genre</string>
     <string name="genre_artist_title">Popular %s artists</string>
